--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -9,7 +9,7 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="{% static 'js/axios.min.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.2/axios.min.js"></script>
 </head>
 <body>
   <div class="container-fluid wrap-container">
