--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -10,23 +10,14 @@
 {% block js %}
   <script>
     var loginForm = $('#loginForm');
+    var csrfmiddlewaretoken = $('input[name="csrfmiddlewaretoken"]');
     var submit = $('#submit');
     submit.click(function(e) {
-      var data = new URLSearchParams();
+      var data = new FormData();
+      data.append('csrfmiddlewaretoken', csrfmiddlewaretoken.val());
       data.append('email', $('#email').val());
       data.append('password', $('#password').val());
-
-      axios({
-        method: 'post',
-        url: '{% url "login" %}',
-        data: data,
-        xsrfCookieName: 'csrftoken',
-        xsrfHeaderName: 'X-CSRFToken',
-        headers: {
-          'cache-control':  'no-cache',
-          'content-type':   'application/x-www-form-urlencoded'
-        }
-      })
+      axios.post('{% url "login" %}', data)
       .then(function (response) {
         if (response.status === 200) {
           window.location.reload();
