--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,14 @@
   padding-top: 15px;
 }
 
+.app-title {
+  color: red;
+  text-decoration: none;
+}
+.app-title:hover, .app-title:focus {
+  color: red;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -40,8 +48,40 @@
   padding-left: 15px;
 }
 
-
 #share-form {
   width: 500px;
   margin: auto;
+}
+
+/* form errors and request messages and alerts */
+.badge-light {
+  margin-top: 2.5em;
+}
+.errorlist {
+  list-style: none;
+  padding-left: 0px;
+  opacity: 0.8;
+  color: #dc3545;
+  font-size: 12px;
+}
+.msg {
+  margin: 0 !important;
+  margin-bottom: 4px !important;
+  margin-top: 4px !important;
+}
+.messages {
+  z-index: 100;
+  position: fixed;
+  right: 10%;
+  margin-top: -1em;
+  list-style: none;
+  text-align: right;
+}
+.alert {
+  margin-top: 1rem;
+}
+.alert-error {
+  background-color: #f2dede;
+  border-color: #ebcccc;
+  color: #a94442;
 }
