--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -15,7 +15,7 @@
     submit.click(function(e) {
       var data = new FormData();
       data.append('csrfmiddlewaretoken', csrfmiddlewaretoken.val());
-      data.append('username', $('#email').val());
+      data.append('email', $('#email').val());
       data.append('password', $('#password').val());
       axios.post('{% url "login" %}', data)
       .then(function (response) {
