--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -14,6 +14,12 @@
     var submit = $('#submit');
     submit.click(function(e) {
       var data = new FormData();
+      var email =  $('#email').val();
+      var password = $('#password').val();
+      if (!email || !password) {
+        alertMsg("Please enter email and password");
+        return
+      }
       data.append('csrfmiddlewaretoken', csrfmiddlewaretoken.val());
       data.append('email', $('#email').val());
       data.append('password', $('#password').val());
@@ -25,8 +31,10 @@
       })
       .catch(function(e) {
         var response = e.response;
-        if(response && response.status == 401) {
-          alertMsg(response.data.message);
+        if(response && [400, 401].includes(response.status)) {
+          response.data.messages.forEach(function (msg) {
+            alertMsg(msg);
+          })
         }
       })
   })
